--- a/pages/home/styles/home.less
+++ b/pages/home/styles/home.less
@@ -168,3 +168,12 @@
    
    
 }
+.w100{
+    .list-legend{
+        float:right;
+        li{
+            float: left;
+            color:#000;
+        }
+    }
+}
