--- a/pages/home/styles/home.css
+++ b/pages/home/styles/home.css
@@ -156,5 +156,12 @@
   background: url(../../../imgs/header/navbar-icon6.png) center no-repeat;
   background-size: 100% 100%;
 }
+.w100 .list-legend {
+  float: right;
+}
+.w100 .list-legend li {
+  float: left;
+  color: #000;
+}
 
 /*# sourceMappingURL=home.css.map */
