--- a/base-less/variables.less
+++ b/base-less/variables.less
@@ -60,8 +60,8 @@
 @sidebar-dark-color: #333;
 @sidebar-dark-hover-color: #333;
 @sidebar-dark-submenu-bg: lighten(@sidebar-dark-bg, 5%);
-@sidebar-dark-submenu-color: #333;
-@sidebar-dark-submenu-hover-color: #2c52c3;
+@sidebar-dark-submenu-color: #1b2b73;
+@sidebar-dark-submenu-hover-color: #1b2b73;
 
 // Light sidebar
 @sidebar-light-bg: #f9fafc;
