--- a/base-less/sidebar-mini.less
+++ b/base-less/sidebar-mini.less
@@ -107,10 +107,10 @@
     > .treeview-menu {
       display: block !important;
       position: absolute;
-      width: @sidebar-width - 50;
+      width: 250px;
       left: 90px;
-      padding-left:5px;
-      background-color:#fff;
+      background-color:#e0e1e8;
+      
     }
 
     //position the header & treeview menus
