--- a/base-less/skins/skin-blue.less
+++ b/base-less/skins/skin-blue.less
@@ -10,7 +10,7 @@
 .skin-blue {
   //Navbar
   .main-header {
-    background:#3f66d0 url('../../imgs/header/header-bg.jpg') right center no-repeat;
+    background:#223278 url('../../imgs/header/header-bg.jpg') right center no-repeat;
     .navbar {
       
       .navbar-variant(transparent; #fff);
