--- a/pages/home/styles/home.less
+++ b/pages/home/styles/home.less
@@ -36,6 +36,18 @@
             width: 100%;
             height: 70px;
             cursor: pointer;
+            position: relative;
+            &.active:after {
+                content:'';
+                width:30px;
+                height:30px;
+                position: absolute;
+                right:20px;
+                top: 50%;
+                transform:translateY(-50%);
+                background: url(../../../imgs/header/right-icon.png) center no-repeat;
+            }
+        
         }
         .logo2 {
             background: url(../../../imgs/header/logo2.png) left center no-repeat;
@@ -55,116 +67,120 @@
     }
 }
 
-
-
 .navbar-static-top {
+    .user-info {
+        float:right;
+    }
     .nav-container {
         position: relative;
-        float:right;
-        margin-right:20px;
+        float: right;
+        margin-right: 20px;
         .navbar-nav {
-            float:left;
+            float: left;
             position: relative;
-            z-index:2;
-            .navbar-active {
-                .icon {
-                    position: relative;
-                   &:before {
-                    content:'';
-                    position: absolute;
-                    z-index:2;
-                     left:-1px;
-                     right:-1px;
-                     top:-1px;
-                     bottom:-1px;
-                    border-radius: 50%;
-                    background-color:#717ca9;
-                   }
-                   &:after {
-                    content:'';
-                    position: absolute;
-                    z-index:1;
-                    left:-2px;
-                     right:-2px;
-                     top:-2px;
-                     bottom:-2px;
-                    border-radius: 50%;
-                    background-color:#58659b;
-                   }
-                }
-                a {
-                    background-color:#495893;
-                    border-radius:5px;
-                    color:#fff !important;
-                }
+            z-index: 2;
+        }
+        .navbar-active {
+            .icon {
+                position: relative;
                
+                &:before {
+                    content: '';
+                    position: absolute;
+                    z-index: 2;
+                    left: -3px;
+                    right: -3px;
+                    top: -3px;
+                    bottom: -3px;
+                    border-radius: 50%;
+                    background-color: #717ca9;
+                }
+                &:after {
+                    content: '';
+                    position: absolute;
+                    z-index: 1;
+                    left: -6px;
+                    right: -6px;
+                    top: -6px;
+                    bottom: -6px;
+                    border-radius: 50%;
+                    background-color: #58659b;
+                }
             }
-        } 
+            a {
+                background-color: #495893;
+                border-radius: 20px;
+                color: #fff !important;
+            }
+        }
         .dropdown-toggle {
-            float:left;
+            float: left;
             line-height: 70px;
         }
         .dropdown-menu {
-            left:-16px;
-            right:-16px;
-            min-height:100px;
-            top:4px;
-            border:none;
-            z-index:1;
-            padding-top:70px;
+            left: -16px;
+            right: -16px;
+            min-height: 100px;
+            top: 4px;
+            border: none;
+            z-index: 1;
+            padding-top: 48px;
             background: -webkit-linear-gradient(left, rgba(38, 56, 128, .8), rgba(98, 130, 186, .8));
         }
         .arrow-down {
-            width:12px;
-            height:6px;
+            width: 12px;
+            height: 6px;
             position: relative;
-            z-index:2;
+            z-index: 2;
             display: inline-block;
             vertical-align: middle;
             background: url(../../../imgs/header/arrow-down.png) center no-repeat;
-            
         }
         .nav>li>a {
             font-size: 14px;
-            color:#b9caff !important;
+            color: #b9caff !important;
             span {
-                display:inline-block;
+                display: inline-block;
                 vertical-align: middle
             }
         }
-       
         .icon {
             display: inline-block;
             vertical-align: middle;
             width: 18px;
             height: 18px;
-            margin-right:10px;
+            margin-right: 10px;
+            position: relative;
+            .icon-inner {
+                position: absolute;
+                width: 100%;
+                height: 100%;
+                z-index: 3;
+            }
         }
-        .navbar-icon1 {
+        .navbar-icon1 .icon-inner {
             background: url(../../../imgs/header/navbar-icon1-active.png) center no-repeat;
-            background-size: 100% 100%;
+            background-size: 80% 80%;
         }
-        .navbar-icon2 {
+        .navbar-icon2 .icon-inner {
             background: url(../../../imgs/header/navbar-icon2.png) center no-repeat;
-            background-size: 100% 100%;
+            background-size: 80% 80%;
         }
-        .navbar-icon3 {
+        .navbar-icon3 .icon-inner {
             background: url(../../../imgs/header/navbar-icon3.png) center no-repeat;
-            background-size: 100% 100%;
+            background-size: 80% 80%;
         }
-        .navbar-icon4 {
+        .navbar-icon4 .icon-inner {
             background: url(../../../imgs/header/navbar-icon4.png) center no-repeat;
-            background-size: 100% 100%;
+            background-size: 80% 80%;
         }
-        .navbar-icon5 {
+        .navbar-icon5 .icon-inner {
             background: url(../../../imgs/header/navbar-icon5.png) center no-repeat;
-            background-size: 100% 100%;
+            background-size: 80% 80%;
         }
-        .navbar-icon6 {
+        .navbar-icon6 .icon-inner {
             background: url(../../../imgs/header/navbar-icon6.png) center no-repeat;
-            background-size: 100% 100%;
+            background-size: 80% 80%;
         }
     }
-   
-   
 }
