--- a/components/slide-bar/styles/slide-bar.less
+++ b/components/slide-bar/styles/slide-bar.less
@@ -9,6 +9,13 @@
             display: inline-block;
             vertical-align: middle;
         }
+        // &.active,
+        &:hover{
+            > a {
+                background:url(../../imgs/slider-bar/slider-icon-bg.png) center  10px no-repeat !important;
+
+            }
+        }
         .slide-icon1 {
             background:url(../../imgs/slider-bar/slider-icon1.png) center no-repeat;
         }
