--- a/bootstrap/less/navs.less
+++ b/bootstrap/less/navs.less
@@ -7,6 +7,8 @@
 // --------------------------------------------------
 
 .nav {
+
+  
   margin-bottom: 0;
   padding-left: 0; // Override default ul/ol
   list-style: none;
@@ -23,7 +25,7 @@
       &:hover,
       &:focus {
         text-decoration: none;
-        background-color: @nav-link-hover-bg;
+        // background-color: @nav-link-hover-bg;
       }
     }
 
