--- a/pages/home/styles/home.css
+++ b/pages/home/styles/home.css
@@ -1,17 +1,34 @@
+.main-header .logo1 {
+  background: url('../../../imgs/header/logo1.png') left center no-repeat;
+}
+.main-header .logo2 {
+  background: url(../../../imgs/header/logo2.png) left center no-repeat;
+}
+.main-header .logo3 {
+  background: url(../../../imgs/header/logo3.png) left center no-repeat;
+}
+.main-header .logo4 {
+  background: url(../../../imgs/header/logo4.png) left center no-repeat;
+}
+.main-header .logo5 {
+  background: url(../../../imgs/header/logo5.png) left center no-repeat;
+}
+.main-header .logo6 {
+  background: url(../../../imgs/header/logo6.png) left center no-repeat;
+}
 .sys-toggle {
-  width: 320px;
+  width: 364px;
   height: 70px;
   float: left;
   margin-left: 10px;
   position: relative;
 }
-.sys-toggle > .logo1 {
+.sys-toggle > .header-logo {
   position: absolute;
   left: 0;
   right: 0;
   top: 0;
   bottom: 0;
-  background: url('../../../imgs/header/logo1.png') left center no-repeat;
   z-index: 2;
 }
 .sys-toggle .dropdown-toggle {
@@ -40,7 +57,8 @@
   cursor: pointer;
   position: relative;
 }
-.sys-toggle .dropdown-menu > ul > li.active:after {
+.sys-toggle .dropdown-menu > ul > li.active:after,
+.sys-toggle .dropdown-menu > ul > li:hover:after {
   content: '';
   width: 30px;
   height: 30px;
@@ -50,21 +68,6 @@
   -webkit-transform: translateY(-50%);
   transform: translateY(-50%);
   background: url(../../../imgs/header/right-icon.png) center no-repeat;
-}
-.sys-toggle .dropdown-menu .logo2 {
-  background: url(../../../imgs/header/logo2.png) left center no-repeat;
-}
-.sys-toggle .dropdown-menu .logo3 {
-  background: url(../../../imgs/header/logo3.png) left center no-repeat;
-}
-.sys-toggle .dropdown-menu .logo4 {
-  background: url(../../../imgs/header/logo4.png) left center no-repeat;
-}
-.sys-toggle .dropdown-menu .logo5 {
-  background: url(../../../imgs/header/logo5.png) left center no-repeat;
-}
-.sys-toggle .dropdown-menu .logo6 {
-  background: url(../../../imgs/header/logo6.png) left center no-repeat;
 }
 .navbar-static-top .user-info {
   float: right;
