--- a/pages/home/styles/home.css
+++ b/pages/home/styles/home.css
@@ -310,5 +310,18 @@
   background: -webkit-linear-gradient(left, #3862c1, #6381c7);
   background: linear-gradient(left, #3862c1, #6381c7);
 }
+.header-information {
+  height: 80px;
+  width: 100%;
+}
+.header-information .header-info-list {
+  height: 80px;
+}
+.header-information .header-info-list li {
+  width: 20%;
+  height: 80px;
+  float: left;
+  border-right: solid 1px #ccc;
+}
 
 /*# sourceMappingURL=home.css.map */
