--- a/pages/home/styles/home.less
+++ b/pages/home/styles/home.less
@@ -345,3 +345,16 @@
     box-sizing: border-box;
     background:linear-gradient(left,#3862c1,#6381c7)
 }
+.header-information {
+    height:80px;
+    width:100%;
+    .header-info-list{
+        height:80px;
+        li{
+            width:20%;
+            height:80px;
+            float:left;
+            border-right:solid 1px #ccc;
+        }
+    }
+}
