--- a/base-less/boxes.less
+++ b/base-less/boxes.less
@@ -182,7 +182,7 @@
 .box-header {
   color: #333;
   display: block;
-  padding: @box-padding;
+  padding: 30px 0 0 10px;
   position: relative;
   font-size:18px;
 
@@ -204,7 +204,7 @@
     margin: 0;
     line-height: 1;
     padding-left:8px;
-    border-left:2px solid #3d65d0;
+    // border-left:2px solid #3d65d0;
   }
   > .fa,
   > .glyphicon,
