--- a/pages/home/styles/home.css
+++ b/pages/home/styles/home.css
@@ -216,7 +216,7 @@
 }
 .box-title-fl .box-right-nav {
   float: right;
-  margin-top: 26px;
+  margin-right: 20px;
   margin-bottom: 20px;
   width: 403px;
   box-sizing: border-box;
@@ -256,7 +256,7 @@
 }
 .box-title-fr .box-right-navs {
   float: right;
-  margin-top: 26px;
+  margin-right: 20px;
   margin-bottom: 20px;
   width: 403px;
   box-sizing: border-box;
@@ -335,7 +335,7 @@
   padding: 10px 0;
 }
 .header-information .header-info-list li dl dd p span {
-  width: 100px;
+  width: 120px;
   display: inline-block;
   text-align: left;
 }
