--- a/pages/home/styles/home.less
+++ b/pages/home/styles/home.less
@@ -243,7 +243,7 @@
     }
     .box-right-nav{
         float: right;
-        margin-top:26px;
+        margin-right:20px;
         margin-bottom:20px;
         width:403px;
         box-sizing: border-box;
@@ -291,7 +291,7 @@
     }
     .box-right-navs{
         float: right;
-        margin-top:26px;
+        margin-right:20px;
         margin-bottom:20px;
         width:403px;
         box-sizing: border-box;
@@ -375,7 +375,7 @@
                     p{
                         
                         span{
-                            width:100px;
+                            width:120px;
                             display:inline-block;
                             text-align:left;
                             i{
