--- a/components/slide-bar/styles/slide-bar.less
+++ b/components/slide-bar/styles/slide-bar.less
@@ -9,11 +9,9 @@
             display: inline-block;
             vertical-align: middle;
         }
-        // &.active,
-        &:hover{
+        &.active{
             > a {
                 background:url(../../imgs/slider-bar/slider-icon-bg.png) center  10px no-repeat !important;
-
             }
         }
         .slide-icon1 {
