--- a/components/main/main.css
+++ b/components/main/main.css
@@ -4,7 +4,7 @@
   display: inline-block;
   vertical-align: middle;
 }
-.sidebar-menu .treeview:hover > a {
+.sidebar-menu .treeview.active > a {
   background: url(../../imgs/slider-bar/slider-icon-bg.png) center 10px no-repeat !important;
 }
 .sidebar-menu .treeview .slide-icon1 {
