--- a/pages/home/styles/home.less
+++ b/pages/home/styles/home.less
@@ -17,6 +17,9 @@
     .logo6 {
         background: url(../../../imgs/header/logo6.png) left center no-repeat;
     }
+    .logo7 {
+        background: url(../../../imgs/header/logo7.png) left center no-repeat;
+    }
 } 
 
 .sys-toggle {
@@ -27,7 +30,7 @@
     position: relative;
     >.header-logo {
         position: absolute;
-        left: 0;
+        left: -10px;
         right: 0;
         top: 0;
         bottom: 0;
@@ -413,4 +416,35 @@
         }
     }
 }
+.shiel{
+    .left-shiel{
+        float:left;
+        width:50%;
+        height:210px;
+    }
+    .right-shiel{
+        float:right;
+        width:50%;
+        height:210px;
+        margin-top:30px;
+        dl{
 
+            margin-bottom:20px;
+            dt{
+                float: left;
+                margin-right:10px;
+            }
+            dd{
+                float: left;
+                .list-title{
+                    color:#6c84b9;
+                    font-size:12px;
+                    padding-right:15px;
+                }
+                .list-number{
+                    font-size:14px;
+                }
+            }
+        }
+    }
+}
