--- a/base-less/boxes.less
+++ b/base-less/boxes.less
@@ -4,7 +4,7 @@
  */
  .box-wrapper {
    border-radius: 5px;
-   box-shadow: @box-boxshadow;
+   box-shadow: 0 0 4px rgba(0,0,0,0.4);
    
    background:rgba(255,255,255,.4)
  }
