--- a/pages/home/styles/home.css
+++ b/pages/home/styles/home.css
@@ -328,7 +328,7 @@
   width: 20%;
   height: 80px;
   float: left;
-  border-right: solid 1px #ededed;
+  border-right: solid 1px #ccc;
 }
 .header-information .header-info-list li dl dt {
   float: left;
