--- a/pages/home/styles/home.less
+++ b/pages/home/styles/home.less
@@ -55,7 +55,7 @@
         top: 4px;
         z-index: 1;
         padding-top: 80px;
-        background: -webkit-linear-gradient(left, rgba(38, 56, 128, .8), rgba(98, 130, 186, .8));
+        background: -webkit-linear-gradient(to right, rgba(38, 56, 128, .8), rgba(98, 130, 186, .8));
         border: none;
         >ul>li{
             width: 100%;
@@ -137,7 +137,7 @@
             border: none;
             z-index: 1;
             padding-top: 48px;
-            background: -webkit-linear-gradient(left, rgba(38, 56, 128, .8), rgba(98, 130, 186, .8));
+            background: -webkit-linear-gradient(to right, rgba(38, 56, 128, .8), rgba(98, 130, 186, .8));
         }
         .arrow-down{
             width: 12px;
@@ -345,7 +345,7 @@
     left:0;
     z-index:0;
     box-sizing: border-box;
-    background:linear-gradient(left,#3862c1,#6381c7)
+    background:linear-gradient(to right,#3862c1,#6381c7)
 }
 .color-sliders{
     width:100px;
@@ -355,7 +355,7 @@
     left:0;
     z-index:0;
     box-sizing: border-box;
-    background:linear-gradient(left,#3862c1,#6381c7)
+    background:linear-gradient(to right,#3862c1,#6381c7)
 }
 .header-information {
     height:80px;
