--- a/pages/home/styles/home.css
+++ b/pages/home/styles/home.css
@@ -52,7 +52,7 @@
   top: 4px;
   z-index: 1;
   padding-top: 80px;
-  background: -webkit-linear-gradient(left, rgba(38, 56, 128, 0.8), rgba(98, 130, 186, 0.8));
+  background: -webkit-linear-gradient(to right, rgba(38, 56, 128, 0.8), rgba(98, 130, 186, 0.8));
   border: none;
 }
 .sys-toggle .dropdown-menu > ul > li {
@@ -128,7 +128,7 @@
   border: none;
   z-index: 1;
   padding-top: 48px;
-  background: -webkit-linear-gradient(left, rgba(38, 56, 128, 0.8), rgba(98, 130, 186, 0.8));
+  background: -webkit-linear-gradient(to right, rgba(38, 56, 128, 0.8), rgba(98, 130, 186, 0.8));
 }
 .navbar-static-top .nav-container .arrow-down {
   width: 12px;
@@ -304,7 +304,7 @@
   z-index: 0;
   box-sizing: border-box;
   background: -webkit-linear-gradient(left, #3862c1, #6381c7);
-  background: linear-gradient(left, #3862c1, #6381c7);
+  background: linear-gradient(to right, #3862c1, #6381c7);
 }
 .color-sliders {
   width: 100px;
@@ -315,7 +315,7 @@
   z-index: 0;
   box-sizing: border-box;
   background: -webkit-linear-gradient(left, #3862c1, #6381c7);
-  background: linear-gradient(left, #3862c1, #6381c7);
+  background: linear-gradient(to right, #3862c1, #6381c7);
 }
 .header-information {
   height: 80px;
