--- a/base-less/sidebar-mini.less
+++ b/base-less/sidebar-mini.less
@@ -104,14 +104,17 @@
       //overflow: visible;
     }
     // > a > span:not(.pull-right), //:not(.pull-right-container),
-    > .treeview-menu {
-      display: block !important;
-      position: absolute;
-      width: 250px;
-      left: 90px;
-      background-color:#e0e1e8;
+    // > .treeview-menu {
+    //   display: block !important;
+    //   position: absolute;
+    //   width: 250px;
+    //   left: 90px;
+    //   background-color:#e0e1e8;
+    //    // top:44px;
+    //    top: 0px;
+    //    margin-left: 0;
       
-    }
+    // }
 
     //position the header & treeview menus
     > a > span {
@@ -132,11 +135,7 @@
     //     display: none;
     //   }
     // }
-    > .treeview-menu {
-      // top:44px;
-      top: 0px;
-      margin-left: 0;
-    }
+   
   }
 }
 
