--- a/base-less/sidebar-mini.less
+++ b/base-less/sidebar-mini.less
@@ -154,7 +154,7 @@
 .main-sidebar .user-panel,
 .sidebar-menu > li.header {
   white-space: nowrap;
-  overflow: hidden;
+  // overflow: hidden;
 }
 
 .sidebar-menu:hover {
