--- a/base-less/treeview.less
+++ b/base-less/treeview.less
@@ -2,27 +2,30 @@
 .treeview-menu {
 	display: none;
 	list-style: none;
-	padding: 0;
 	margin: 0;
-	border:1px solid #d0d2d6;
-	padding:18px;
+	padding:10px;
 	position: absolute;
 	width: 250px;
-	left: 90px;
-	top:50px;
-	background-color:#e0e1e8;
-	border-radius: 5px;
-	&:before {
+	left: 100%;
+	top:0px;
+
+	.treeview-menu-inner {
+		padding:15px;
+		border:1px solid #d0d2d6;
+		background-color:#e0e1e8 !important;
+		border-radius: 5px;
+	}
+	& > .arrow {
 		content:'';
 		position: absolute;
 		top:20px;
-		left:-5px;
+		left:5px;
 		width:10px;
 		height:10px;
 		border:inherit;
 		border-right: none;
 		border-top:none;
-		background-color: inherit;
+		background-color: #e0e1e8;
 		transform:rotate(45deg)
 	}
 	> li {
